--- a/config.json
+++ b/config.json
@@ -1,7 +1,6 @@
 {
   "shop_info": {
     "name": "ARTHOLST",
-    "slogan": "Натуральный хлопковый холст • Подрамник из цельного дерева • Улучшаем качество фото",
     "instagram": "@artholst_belarus"
   },
   
@@ -30,12 +29,14 @@
   ],
   
   "promo_cards": [
-    { "icon": "🎨", "title": "Улучшаем фото" },
-    { "icon": "⚡️", "title": "1-3 дня" },
+    { "icon": "🎨", "title": "Улучшаем качество плохих фото" },
+    { "icon": "⚡️", "title": "Быстрое изготовление 1-3 дня" },
     { "icon": "💯", "title": "Гарантия 100+ лет" },
-    { "icon": "🌿", "title": "Хлопковый холст" },
-    { "icon": "🪵", "title": "Цельное дерево" },
-    { "icon": "🖼️", "title": "Галерейная натяжка" }
+    { "icon": "🌿", "title": "Натуральный хлопковый холст" },
+    { "icon": "🪵", "title": "Подрамник из цельного дерева" },
+    { "icon": "🖼️", "title": "Галерейная натяжка холста" },
+    { "icon": "🧪", "title": "Гипоаллергенные краски" },
+    { "icon": "❤️", "title": "16 000 довольных клиентов" }
   ],
   
   "sizes": [
@@ -52,12 +53,6 @@
     { "width": 70, "height": 100, "price": 109, "packaging_price": 20, "delivery_price": 20, "hit": true, "popular": false },
     { "width": 80, "height": 120, "price": 129, "packaging_price": 24, "delivery_price": 22, "hit": false, "popular": false }
   ],
-  
-  "delivery": {
-    "courier_minsk": { "name": "Курьер по Минску", "price": 15 },
-    "pickup": { "name": "Самовывоз", "price": 0, "address": "г. Минск, район Минск Мир" },
-    "post": { "name": "Белпочта", "price_depends_on_size": true }
-  },
   
   "example_works": [
     { "category": "Семья", "icon": "👨‍👩‍👧‍👦", "size": "50×70" },
