--- a/config.json
+++ b/config.json
@@ -1,63 +1,126 @@
 {
   "shop_info": {
     "name": "ARTHOLST",
-    "instagram": "@artholst_belarus"
+    "instagram": "@artholst_belarus",
+    "manager_telegram": "https://t.me/oformitszakaz",
+    "since_year": 2018,
+    "happy_clients": 15000
   },
-  
   "banners": [
     {
       "id": 1,
-      "emoji": "🎁",
-      "title": "Бесплатная доставка",
+      "title": "🚀 Бесплатная доставка",
       "subtitle": "При заказе от 200 BYN",
-      "gradient": "linear-gradient(135deg, #FF6B35 0%, #FF8C42 100%)"
+      "icon": "🎁",
+      "gradient": "linear-gradient(135deg, #ff6b35 0%, #f7931e 100%)",
+      "promo_code": null,
+      "full_description": "Отличные новости! Теперь доставка стала ещё доступнее!\n\n✨ При заказе от 200 BYN мы берём доставку на себя — вы не платите ни копейки!\n\n🚗 Курьер по Минску\n📮 Белпочта по всей Беларуси\n\nЗакажите несколько картин для себя или в подарок близким — и получите их совершенно бесплатно!"
     },
     {
       "id": 2,
-      "emoji": "🔥",
-      "title": "Скидка 15%",
+      "title": "🔥 Скидка 15% на всё",
       "subtitle": "При заказе от 3-х картин",
-      "gradient": "linear-gradient(135deg, #7C3AED 0%, #A855F7 100%)"
+      "icon": "💎",
+      "gradient": "linear-gradient(135deg, #667eea 0%, #764ba2 100%)",
+      "promo_code": null,
+      "full_description": "Больше картин — больше выгода!\n\n💎 Закажите 3 и более картин и получите скидку 15% на весь заказ!\n\n🎨 Создайте галерею у себя дома\n🎁 Идеально для подарков всей семье\n👨‍👩‍👧‍👦 Семейные фото, портреты детей, любимые моменты\n\nСкидка применяется автоматически при добавлении 3-й картины в корзину!"
     },
     {
       "id": 3,
-      "emoji": "⚡️",
-      "title": "Промокод СЕГОДНЯ",
-      "subtitle": "Скидка 10% в среду и субботу",
-      "gradient": "linear-gradient(135deg, #F59E0B 0%, #FF6B35 100%)"
+      "title": "⚡️ Счастливые дни",
+      "subtitle": "Среда и Суббота — скидка 10%",
+      "icon": "🎉",
+      "gradient": "linear-gradient(135deg, #f093fb 0%, #f5576c 100%)",
+      "promo_code": "СЕГОДНЯ",
+      "full_description": "Ловите момент! Каждую среду и субботу у нас счастливые дни!\n\n🎉 Введите промокод СЕГОДНЯ и получите скидку 10% на весь заказ!\n\n⏰ Акция действует:\n• Среда — весь день\n• Суббота — весь день\n\n💡 Промокод можно ввести в корзине перед оформлением заказа.\n\nНе упустите свой счастливый день!"
     }
   ],
-  
-  "promo_cards": [
-    { "icon": "🎨", "title": "Улучшаем качество плохих фото" },
-    { "icon": "⚡️", "title": "Быстрое изготовление 1-3 дня" },
-    { "icon": "💯", "title": "Гарантия 100+ лет" },
-    { "icon": "🌿", "title": "Натуральный хлопковый холст" },
-    { "icon": "🪵", "title": "Подрамник из цельного дерева" },
-    { "icon": "🖼️", "title": "Галерейная натяжка холста" },
-    { "icon": "🧪", "title": "Гипоаллергенные краски" },
-    { "icon": "❤️", "title": "16 000 довольных клиентов" }
+  "advantages": [
+    {
+      "icon": "✨",
+      "title": "Улучшаем качество фото",
+      "short": "Улучшаем фото",
+      "full_description": "Не переживайте за качество исходного фото!\n\n🎨 Наши дизайнеры бесплатно:\n• Повысят разрешение изображения\n• Скорректируют цвета и контраст\n• Уберут мелкие дефекты\n• Отретушируют при необходимости\n\n📸 Даже фото с телефона превратится в произведение искусства!\n\nМы покажем макет до печати — вы точно останетесь довольны!"
+    },
+    {
+      "icon": "⚡",
+      "title": "Быстрое изготовление 1-3 дня",
+      "short": "1-3 дня",
+      "full_description": "Мы ценим ваше время!\n\n⚡ Сроки изготовления:\n• Стандартный заказ: 1-3 рабочих дня\n• Срочный заказ: 24 часа (+30%)\n\n🏭 Собственное производство в Минске позволяет нам работать быстро без потери качества.\n\n📦 Сразу после изготовления — отправка или доставка курьером!"
+    },
+    {
+      "icon": "💎",
+      "title": "Гарантия 100+ лет",
+      "short": "Гарантия 100+ лет",
+      "full_description": "Ваши воспоминания — навсегда!\n\n💎 Почему мы даём такую гарантию:\n• UV-стойкие чернила не выгорают\n• Натуральный холст не трескается\n• Качественный подрамник не деформируется\n\n🏆 Более 15 000 довольных клиентов с 2018 года!\n\nКартина будет радовать вас, ваших детей и внуков!"
+    },
+    {
+      "icon": "🌿",
+      "title": "Натуральный хлопковый холст",
+      "short": "Хлопковый холст",
+      "full_description": "Только натуральные материалы!\n\n🌿 Наш холст:\n• 100% натуральный хлопок\n• Плотность 360 г/м²\n• Музейное качество текстуры\n• Матовая поверхность без бликов\n\n🎨 Хлопковый холст идеально передаёт цвета и создаёт эффект настоящей картины маслом!"
+    },
+    {
+      "icon": "🪵",
+      "title": "Подрамник из цельного дерева",
+      "short": "Цельное дерево",
+      "full_description": "Основа качества — надёжный подрамник!\n\n🪵 Наши подрамники:\n• Из натуральной сосны\n• Цельное дерево (не ДСП!)\n• Толщина 2 см — солидный объём\n• Не деформируются со временем\n\n🔧 Картина сразу готова к подвешиванию — крепления в комплекте!"
+    },
+    {
+      "icon": "🖼",
+      "title": "Галерейная натяжка",
+      "short": "Галерейная натяжка",
+      "full_description": "Как в настоящей галерее!\n\n🖼 Галерейная натяжка означает:\n• Холст загнут на торцы подрамника\n• Картина выглядит объёмно\n• Не нужна рама — сразу готова\n• Скобы сзади — не видны\n\n✨ Это самый популярный и стильный способ оформления!"
+    },
+    {
+      "icon": "🌱",
+      "title": "Гипоаллергенные краски",
+      "short": "Эко-краски",
+      "full_description": "Безопасно для всей семьи!\n\n🌱 Наши краски:\n• На водной основе\n• Без запаха\n• Гипоаллергенные\n• Экологически чистые\n• Безопасны для детских комнат\n\n👶 Можете смело вешать картину в детской — она абсолютно безопасна!"
+    },
+    {
+      "icon": "❤️",
+      "title": "15 000 довольных клиентов",
+      "short": "15 000+ клиентов",
+      "full_description": "Нам доверяют тысячи семей!\n\n❤️ ARTHOLST в цифрах:\n• 15 000+ выполненных заказов\n• Работаем с 2018 года\n• 4.9 ★ средняя оценка\n• 98% клиентов рекомендуют нас\n\n📱 Посмотрите отзывы в нашем Instagram @artholst_belarus\n\nПрисоединяйтесь к семье ARTHOLST!"
+    }
   ],
-  
   "sizes": [
-    { "width": 30, "height": 30, "price": 33, "packaging_price": 10, "delivery_price": 10, "hit": false, "popular": false },
-    { "width": 30, "height": 50, "price": 39, "packaging_price": 10, "delivery_price": 10, "hit": false, "popular": false },
-    { "width": 40, "height": 40, "price": 44, "packaging_price": 12, "delivery_price": 12, "hit": false, "popular": false },
-    { "width": 40, "height": 60, "price": 49, "packaging_price": 12, "delivery_price": 12, "hit": false, "popular": false },
-    { "width": 50, "height": 50, "price": 55, "packaging_price": 14, "delivery_price": 14, "hit": false, "popular": false },
-    { "width": 50, "height": 70, "price": 59, "packaging_price": 14, "delivery_price": 14, "hit": true, "popular": false },
-    { "width": 60, "height": 60, "price": 66, "packaging_price": 16, "delivery_price": 16, "hit": false, "popular": false },
-    { "width": 60, "height": 80, "price": 69, "packaging_price": 16, "delivery_price": 16, "hit": false, "popular": true },
-    { "width": 70, "height": 70, "price": 79, "packaging_price": 18, "delivery_price": 18, "hit": false, "popular": false },
-    { "width": 80, "height": 80, "price": 89, "packaging_price": 18, "delivery_price": 18, "hit": false, "popular": false },
-    { "width": 70, "height": 100, "price": 109, "packaging_price": 20, "delivery_price": 20, "hit": true, "popular": false },
-    { "width": 80, "height": 120, "price": 129, "packaging_price": 24, "delivery_price": 22, "hit": false, "popular": false }
+    {"width": 30, "height": 30, "price": 33, "packaging_price": 10, "delivery_price": 10, "hit": false, "popular": false},
+    {"width": 30, "height": 50, "price": 39, "packaging_price": 10, "delivery_price": 10, "hit": false, "popular": false},
+    {"width": 40, "height": 40, "price": 44, "packaging_price": 12, "delivery_price": 12, "hit": false, "popular": false},
+    {"width": 40, "height": 60, "price": 49, "packaging_price": 12, "delivery_price": 12, "hit": false, "popular": false},
+    {"width": 50, "height": 50, "price": 55, "packaging_price": 14, "delivery_price": 14, "hit": false, "popular": false},
+    {"width": 50, "height": 70, "price": 59, "packaging_price": 14, "delivery_price": 14, "hit": true, "popular": false},
+    {"width": 60, "height": 60, "price": 66, "packaging_price": 16, "delivery_price": 16, "hit": false, "popular": false},
+    {"width": 60, "height": 80, "price": 69, "packaging_price": 16, "delivery_price": 16, "hit": false, "popular": true},
+    {"width": 70, "height": 70, "price": 79, "packaging_price": 18, "delivery_price": 18, "hit": false, "popular": false},
+    {"width": 80, "height": 80, "price": 89, "packaging_price": 18, "delivery_price": 18, "hit": false, "popular": false},
+    {"width": 70, "height": 100, "price": 109, "packaging_price": 20, "delivery_price": 20, "hit": true, "popular": false},
+    {"width": 80, "height": 120, "price": 129, "packaging_price": 24, "delivery_price": 22, "hit": false, "popular": false}
   ],
-  
-  "example_works": [
-    { "category": "Семья", "icon": "👨‍👩‍👧‍👦", "size": "50×70" },
-    { "category": "Дети", "icon": "👶", "size": "40×60" },
-    { "category": "Пары", "icon": "💑", "size": "60×80" },
-    { "category": "Питомцы", "icon": "🐕", "size": "50×50" }
-  ]
+  "delivery": {
+    "free_from": 200,
+    "courier_minsk": {
+      "name": "Курьер по Минску",
+      "inside_mkad": 15,
+      "outside_mkad": 20
+    },
+    "pickup": {
+      "name": "Самовывоз",
+      "price": 0,
+      "address": "г. Минск, район Минск Мир"
+    },
+    "post": {
+      "name": "Белпочта",
+      "note": "Рассчитывается от размеров"
+    }
+  },
+  "promo_codes": {
+    "СЕГОДНЯ": {
+      "discount_percent": 10,
+      "valid_days": [3, 6],
+      "description": "Скидка 10% в счастливые дни"
+    }
+  }
 }
